--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -1,6 +1,10 @@
-FROM adoptopenjdk/openjdk8:ubi-jre
+FROM adoptopenjdk/maven-openjdk8 AS builder
 MAINTAINER Priyank Garg
 WORKDIR /app
-COPY target/*.jar deployment.jar
+COPY . /app
+RUN mvn clean install
+
+FROM adoptopenjdk/openjdk8:ubi-jre
+COPY --from=builder /app/target/*.jar deployment.jar
 USER 1001
 ENTRYPOINT java $JVM_OPTS -jar deployment.jar
