Added push secret

--- a/deploy/build-template.yaml
+++ b/deploy/build-template.yaml
@@ -33,6 +33,8 @@ objects:
         to:
           kind: DockerImage
           name: "${IMAGE_REGISTRY}/${IMAGE_REPO}/${NAME}:${IMAGE_TAG}"
+        pushSecret:
+          name: de-icr-push-secret
       triggers:
         - type: ImageChange
         - type: ConfigChange
