--- a/deploy/deploy-template.yaml
+++ b/deploy/deploy-template.yaml
@@ -43,7 +43,7 @@ objects:
       selector:
         matchLabels:
           app: "${NAME}"
-      replicas: "{REPLICAS}"
+      replicas: "${REPLICAS}"
       template:
         metadata:
           labels:
@@ -115,14 +115,14 @@ parameters:
     displayName: IMAGE_REGISTRY
     description: Application image registry URL.
     required: true
-    value: "de.icr.io"
+    value: de.icr.io
   - name: IMAGE_REPO
     displayName: IMAGE_REPO
     description: Application image repository.
     required: true
-    value: "myrepo"
+    value: myrepo
   - name: IMAGE_TAG
     displayName: IMAGE_TAG
     description: Application image version.
     required: true
-    value: "latest"
+    value: latest
