--- a/deploy/deploy-template.yaml
+++ b/deploy/deploy-template.yaml
@@ -24,7 +24,7 @@ objects:
           port: 8080
           targetPort: 8080
       selector:
-        name: "${NAME}"
+        app: "${NAME}"
   - kind: Route
     apiVersion: v1
     metadata:
